	* Changed Lookup so added lookups are added in the Lookup plugin
	itself so there's no dependency on Alias, and so loaded lookups
	can be seen via 'list Lookup'.
	
	* Added User.list command to list registered users.
	
	* Fixed bug #850931 as well as several other minor bugs in
	Utilities.re.
	
	* Fixed bug #851254, Factoids.whatis didn't work on numeric keys.

	* Added the ability to turn on/off the showing of ids in FunDB
	excuse/insult/praise/lart.
	
	* Added the to= keyword argument to the various reply functions to
	you can specify a target to send the message to.
	
	* Changed socketDrivers to allow more time (10x more, to be exact)
	for connecting to the network than for the normal read.
	
	* Fixed a bug in Http.weather that would cause an ugly error
	message for a command like "weather hell".
	
	* Added the number of strings to the Fun.object output.
	
	* Fixed bug in RSS.configure; no aliases could be added.
	
	* Changed Alias.freeze to Alias.lock.
	
	* Fixed sorting in Status' uptime database.
	
	* Updated the Gameknot tests for expired games, and updated the
	Gameknot plugin to handle such links in its snarfer.
	
	* Added a 'server' attribute to Irc objects to unify the way to
	access such information.
	
	* Added revision command for finding out the revision of the files
	in a running bot; also added __revision__ strings so CVS would be 
	happy to keep such information for us :)
	
	* Fixed bug #848475 -- bad error message from regexp-expecting
	commands.
	
	* Stopped listing the plugin dispatcher command in the list of
	commands for that plugin.
	
	* Fixed bug in Gameknot.gkstats when retrieving the stats for
	users who haven't yet played a game.

	* Added a numUsers() method to ircdb.UsersDB (ircdb.users).
	
2003-11-18  Jeremy Fincher  <jemfinch@users.sf.net>

	* Changed commands so that plugins no longer have to make sure
	that their commands are unique within the bot.  Ambiguous commands
	will reply with an error message and instruct the user to