@@ -1,3 +1,6 @@
+	* Added Karma.most for determining various "mosts" in the Karma
+	database.
+	
 	* Changed Lookup so added lookups are added in the Lookup plugin
 	itself so there's no dependency on Alias, and so loaded lookups
 	can be seen via 'list Lookup'.
